--- a/Single Page CV/single_page_cv_plain.html
+++ b/Single Page CV/single_page_cv_plain.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Shukri Isse">
-    <meta name="description" content="This is a single page cv/resume written in HTML5">
-    <meta name="keywords" content="Junior Frontend Developer, HTML, CSS, JavaScript, Web Development">
+    <meta name="description" content="This is a single page cv written in HTML5">
+    <meta name="keywords" content="Junior Frontend Developer, HTML, CSS, JavaScript, Web Development, CV, Beginner, Entry Level">
     
     <!--Open Graph Tags for Social Media Sharing-->
-    <meta property="og:title" content="Your Name - Junior Frontend Developer CV">
+    <meta property="og:title" content="Shukri Isse - CV">
     <meta property="og:description" content="Explore my CV with details about my skills, education, and experience in frontend development.">
+    <meta property="og:url" content="https://www.linkedin.com/in/shukri-isse/">
     <meta property="og:type" content="website">   
 
-    <!--Favicon-->
+    <!--Favicon from https://icons8.com/icons/set/document-->
     <link rel="icon" href="img/icons8-document-64.png" type="image/x-icon">
 
     <title>Single Page CV</title>
@@ -21,14 +22,16 @@
     <hr>
     <!--Header-->
     <header>
-        <h1>Your Name</h1>
-        <h2>Junior Frontend Developer</h2>
-        <address>
-            123 Your Street <br>
-            Your City, ST 12345 <br>
-            <a href="tel:+1234567890">(123) 456-7890</a><br>
-            <a href="mailto:no_reply@example.com">no_reply@example.com</a>
-        </address>
+        <h1>Shukri Isse</h1>
+        <!-- <h2>Junior Frontend Developer</h2> -->
+        <section id="personal-info">
+            <p>
+                123 Your Street <br>
+                Your City, ST 12345 <br>
+                <a href="tel:+1234567890">(123) 456-7890</a><br>
+                <a href="mailto:shukri.isse1234@gmail.com@gmail.com">shukri.isse1234@gmail.com</a>
+            </p>
+        </section>
     </header>
 
     <!--Main-->
@@ -36,15 +39,15 @@
         <section id="skills">
             <h2>Skills</h2>
             <p>
-                HTML, CSS, JavaScript, Accessibility, Figma to Design, Responsive Web Design, Technical Writing, Presentation
+                HTML, CSS, Python, Java, C, C++, OCal, Assembly x86-64, Accessibility, Figma to Design, Responsive Web Design, SDLC, Testing, UI/UX, Software Engineering
             </p>
         </section>
 
         <section id="education">
             <h2>Education</h2>
-            <h3>School Name, Location - Job Title</h3>
+            <h3>University of Minnesota - Twin Cities, Minneapolis, MN - Computer Science</h3>
             <p>
-                Month 20xx to Month 20xx <br>
+                Sep 2018 to Dec 2023 <br>
                 List of exciting things you did at university
             </p>
         </section>
@@ -89,14 +92,12 @@
         <h2>Across the Internet</h2>
         <ul>
             <li>
-                <a href="https://www.LinkedIn.com">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/shukri-isse/">Linkedin</a>
             </li>
             <li>
-                <a href="https://www.github.com">Git Hub</a>
+                <a href="https://github.com/shukri-isse/">Git Hub</a>
             </li>
         </ul>
     </footer>
 </body>
 </html>
-
-<!--favicon from https://icons8.com/icons/set/document-->
