--- a/Single Page CV/single_page_cv_plain.html
+++ b/Single Page CV/single_page_cv_plain.html
@@ -39,7 +39,7 @@
         <section id="skills">
             <h2>Skills</h2>
             <p>
-                HTML, CSS, Python, Java, C, C++, OCal, Assembly x86-64, Accessibility, Figma to Design, Responsive Web Design, SDLC, Testing, UI/UX, Software Engineering
+                HTML, CSS, Python, Java, C, C++, OCaml, Assembly x86-64, Accessibility, Figma to Design, Responsive Web Design, SDLC, Testing, UI/UX, Software Engineering
             </p>
         </section>
 
